--- a/myapp/package.json
+++ b/myapp/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.9.1",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
+    "react-type-animation": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
