--- a/myapp/package.json
+++ b/myapp/package.json
@@ -8,18 +8,20 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-    
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.3.1",
     "antd": "^5.9.1",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.2",
     "react-router-dom": "^6.16.0",
-    "react-type-animation": "^3.1.0"
+    "react-type-animation": "^3.1.0",
+    "yup": "^1.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
