--- a/myapp/package.json
+++ b/myapp/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.3.1",
+    "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-query-devtools": "^4.35.3",
     "antd": "^5.9.1",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
