--- a/myapp/package.json
+++ b/myapp/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
     "antd": "^5.9.1",
+    "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
